Fixed backdrop's height on iOS

--- a/src/css/template.scss
+++ b/src/css/template.scss
@@ -2,6 +2,7 @@
     position: fixed;
     left: 0;
     top: 0;
+    height: 100%;
 }
 
 .ZebraDialogBackdrop {
